# a653lib

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE.md  Makefile  Makefile.old  README.md  a653_config.h  apex_config.h  flake.nix  init.c  main.c  partition_a.c  partition_b.c  wasm32_loader.c  wasm_call_indirect.c  wasm_gen_struct_getset_code.py  wasm_gen_struct_getset_header.py  wasm_guest_trampoline.c
.ci/: gen-workflow-files.nu
.github/workflows/: nix.yaml
a653_inc/: a653Error.h  a653Init.h  a653Lib.h  a653Partition.h  a653Process.h  a653Queuing.h  a653Sampling.h  a653Semaphore.h  a653Time.h  a653Type.h
a653_lib/: Makefile  Makefile.old  a653Init.c  a653_i_blackboard.c  a653_i_buffer.c  a653_i_error.c  a653_i_error.h  a653_i_event.c  a653_i_mutex.c  a653_i_partition.c  a653_i_partition.h  a653_i_process.c  a653_i_process.h  a653_i_queuing.c  a653_i_queuing.h  a653_i_sampling.c  a653_i_sampling.h  a653_i_semaphore.c  a653_i_shm_if.c  a653_i_shm_if.h  a653_i_sync.c  a653_i_sync.h  a653_i_time.c  a653_i_time_lib.c  a653_i_time_lib.h
a653_lib_wasm32/: Makefile  a653_i_common_wasm32.c  a653_i_common_wasm32.h  a653_wamr.c  a653_wamr.h  a653_wasmtime.c  a653_wasmtime.h  apex_host_fncs_wasm32.c  apex_host_fncs_wasm32.h  arinc653_part1_apex_blackboard_wasm32.c  arinc653_part1_apex_blackboard_wasm32.h  arinc653_part1_apex_buffer_wasm32.c  arinc653_part1_apex_buffer_wasm32.h  arinc653_part1_apex_error_wasm32.c  arinc653_part1_apex_error_wasm32.h  arinc653_part1_apex_event_wasm32.c  arinc653_part1_apex_event_wasm32.h  arinc653_part1_apex_mutex_wasm32.c  arinc653_part1_apex_mutex_wasm32.h  arinc653_part1_apex_partition_wasm32.c  arinc653_part1_apex_partition_wasm32.h  arinc653_part1_apex_process_wasm32.c  arinc653_part1_apex_process_wasm32.h  arinc653_part1_apex_queuing_port_wasm32.c  arinc653_part1_apex_queuing_port_wasm32.h  arinc653_part1_apex_sampling_port_wasm32.c  arinc653_part1_apex_sampling_port_wasm32.h  arinc653_part1_apex_semaphore_wasm32.c  arinc653_part1_apex_semaphore_wasm32.h  arinc653_part1_apex_time_wasm32.c  arinc653_part1_apex_time_wasm32.h  arinc653_part2_apex_sampling_port_extension_wasm32.c  arinc653_part2_apex_sampling_port_extension_wasm32.h  arinc653_wasm32_helper.h  generic_helper.c  generic_helper.h  wasm32_main.c
apex_inc/: apexError.h  apexInit.h  apexLib.h  apexPartition.h  apexProcess.h  apexQueuing.h  apexSampling.h  apexTime.h  apexType.h  readme
apex_lib/: Makefile  apexInit.c  apex_i_partition.c  apex_i_partition.h  apex_i_process.c  apex_i_process.h  apex_i_queuing.c  apex_i_queuing.h  apex_i_sampling.c  apex_i_sampling.h  apex_i_shm_if.c  apex_i_shm_if.h  apex_i_sync.c  apex_i_sync.h  apex_i_time.c  apex_i_time_lib.c  apex_i_time_lib.h  readme
patches/: allow-cc-override.patch
pkgs/: a653lib.nix  a653wasmtime.nix
scripts/: process-arinc-header.awk  split-arinc-header.awk
